clean up server code and add simple way to interact with database

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <h1 id="welcome">Welcome to my webpage!</h1>
     <h3>What is your name?</h3>
     <input type="text"></input>
-    <button type="button" id="name-button">Click me!</button>
+    <button type="button" id="name-button">Send a greeting!</button><br>
+    <button type="button" id="save-button">Save your name to the database!</button><br>
 </body>
 </html>
